// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Core > applyAutoFixes > basic 1`] = `"const a = 1;"`;

exports[`Core > applyAutoFixes > fix overlapped problems 1`] = `
"() => {return (
  () => {return (
    () => {return (
      () => {return (
        () => {return (
          () => {return (
            () => {return (
              () => {return (
                () => {return (
                  () => {return (
                    () => (
                      () => (
                        0
                      )
                    )
                  )}
                )}
              )}
            )}
          )}
        )}
      )}
    )}
  )}
)};"
`;

exports[`Core > applySuggestions 1`] = `"if (!(key in object)) {}"`;

exports[`Core > constructor > pass options to eslint 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/index.js",
    "messages": [
      {
        "ruleId": "prefer-const",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/index.mjs",
    "messages": [
      {
        "ruleId": "ban-exponentiation-operator",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
]
`;

exports[`Core > disablePerFile 1`] = `
"/* eslint-disable prefer-const */
let a = 1;"
`;

exports[`Core > disablePerLine 1`] = `
"// eslint-disable-next-line prefer-const
let a = 1;"
`;

exports[`Core > fixes problems with legacy config and 3rd-party plugins 1`] = `
"// eslint-disable-next-line test/ban-nullish-coalescing-operator
2 ?? 2;"
`;

exports[`Core > flat config 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/.index.js",
    "messages": [
      {
        "ruleId": "prefer-const",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/index.js",
    "messages": [
      {
        "ruleId": "prefer-const",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/index.jsx",
    "messages": [
      {
        "ruleId": "prefer-const",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/index.mjs",
    "messages": [
      {
        "ruleId": "prefer-const",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
]
`;

exports[`Core > flat config 2`] = `"const a = 1;"`;

exports[`Core > flat config 3`] = `"const a = 1;"`;

exports[`Core > flat config 4`] = `"const a = 1;"`;

exports[`Core > flat config 5`] = `"const a = 1;"`;

exports[`Core > lint > returns lint results 1`] = `
[
  {
    "errorCount": 12,
    "filePath": "<fixture>/src/arrow-body-style.js",
    "messages": [
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/ban-exponentiation-operator.js",
    "messages": [
      {
        "ruleId": "ban-exponentiation-operator",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/ban-nullish-coalescing-operator.js",
    "messages": [
      {
        "ruleId": "test/ban-nullish-coalescing-operator",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/import-order.js",
    "messages": [
      {
        "ruleId": "import/order",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/no-unsafe-negation.js",
    "messages": [
      {
        "ruleId": "no-unsafe-negation",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/no-unused-vars.js",
    "messages": [
      {
        "ruleId": "no-unused-vars",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/prefer-const.js",
    "messages": [
      {
        "ruleId": "prefer-const",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
  {
    "errorCount": 0,
    "filePath": "<fixture>/src/warn.js",
    "messages": [
      {
        "ruleId": "prefer-const",
        "severity": 1,
      },
    ],
    "warningCount": 1,
  },
]
`;

exports[`Core > makeFixableAndFix 1`] = `"const _a = 1;"`;

exports[`Core > printDetailsOfResults 1`] = `
"[0m[0m
[0m[4m<fixture>/src/ban-exponentiation-operator.js[24m[0m
[0m  [2m1:1[22m  [31merror[39m  Ban exponentiation operator  [2mban-exponentiation-operator[22m[0m
[0m[0m
[0m[4m<fixture>/src/import-order.js[24m[0m
[0m  [2m1:1[22m  [31merror[39m  Definition for rule 'import/order' was not found  [2mimport/order[22m[0m
[0m[0m
[0m[31m[1m✖ 2 problems (2 errors, 0 warnings)[22m[39m[0m
[0m[31m[1m[22m[39m[0m"
`;

exports[`Core > printSummaryOfResults in ESLint v8 1`] = `
"[1m- 8 files (0 file passed, [91m8 files failed[39m) checked.
- 19 problems ([31m18 errors[39m, [33m1 warning[39m) found.[22m
╔══════════════════════════════════════╤═══════╤═════════╤════════════╤═════════════════╗
║ Rule                                 │ Error │ Warning │ is fixable │ has suggestions ║
╟──────────────────────────────────────┼───────┼─────────┼────────────┼─────────────────╢
║ arrow-body-style                     │ [31m[1m12[39m[22m    │ 0       │ [31m[1m12[39m[22m         │ 0               ║
╟──────────────────────────────────────┼───────┼─────────┼────────────┼─────────────────╢
║ ban-exponentiation-operator          │ [31m[1m1[39m[22m     │ 0       │ 0          │ 0               ║
╟──────────────────────────────────────┼───────┼─────────┼────────────┼─────────────────╢
║ test/ban-nullish-coalescing-operator │ [31m[1m1[39m[22m     │ 0       │ 0          │ 0               ║
╟──────────────────────────────────────┼───────┼─────────┼────────────┼─────────────────╢
║ import/order                         │ [31m[1m1[39m[22m     │ 0       │ 0          │ 0               ║
╟──────────────────────────────────────┼───────┼─────────┼────────────┼─────────────────╢
║ no-unsafe-negation                   │ [31m[1m1[39m[22m     │ 0       │ 0          │ [31m[1m1[39m[22m               ║
╟──────────────────────────────────────┼───────┼─────────┼────────────┼─────────────────╢
║ no-unused-vars                       │ [31m[1m1[39m[22m     │ 0       │ 0          │ 0               ║
╟──────────────────────────────────────┼───────┼─────────┼────────────┼─────────────────╢
║ ]8;;https://example.comprefer-const]8;;                         │ [31m[1m1[39m[22m     │ [31m[1m1[39m[22m       │ [31m[1m2[39m[22m          │ 0               ║
╚══════════════════════════════════════╧═══════╧═════════╧════════════╧═════════════════╝
"
`;

exports[`Core > printSummaryOfResults in ESLint v9+ 1`] = `
"[1m- 8 files (0 file passed, [91m8 files failed[39m) checked.
- 19 problems ([31m18 errors[39m, [33m1 warning[39m) found.[22m
╔══════════════════════════════════════╤═══════╤═════════╤════════════╤═════════════════╗
║ Rule                                 │ Error │ Warning │ is fixable │ has suggestions ║
╟──────────────────────────────────────┼───────┼─────────┼────────────┼─────────────────╢
║ arrow-body-style                     │ [31m[1m12[39m[22m    │ 0       │ [31m[1m12[39m[22m         │ 0               ║
╟──────────────────────────────────────┼───────┼─────────┼────────────┼─────────────────╢
║ ban-exponentiation-operator          │ [31m[1m1[39m[22m     │ 0       │ 0          │ 0               ║
╟──────────────────────────────────────┼───────┼─────────┼────────────┼─────────────────╢
║ test/ban-nullish-coalescing-operator │ [31m[1m1[39m[22m     │ 0       │ 0          │ 0               ║
╟──────────────────────────────────────┼───────┼─────────┼────────────┼─────────────────╢
║ import/order                         │ [31m[1m1[39m[22m     │ 0       │ 0          │ 0               ║
╟──────────────────────────────────────┼───────┼─────────┼────────────┼─────────────────╢
║ no-unsafe-negation                   │ [31m[1m1[39m[22m     │ 0       │ 0          │ [31m[1m1[39m[22m               ║
╟──────────────────────────────────────┼───────┼─────────┼────────────┼─────────────────╢
║ no-unused-vars                       │ [31m[1m1[39m[22m     │ 0       │ 0          │ [31m[1m1[39m[22m               ║
╟──────────────────────────────────────┼───────┼─────────┼────────────┼─────────────────╢
║ ]8;;https://example.comprefer-const]8;;                         │ [31m[1m1[39m[22m     │ [31m[1m1[39m[22m       │ [31m[1m2[39m[22m          │ 0               ║
╚══════════════════════════════════════╧═══════╧═════════╧════════════╧═════════════════╝
"
`;

exports[`Core > supports unstable_config_lookup_from_file flag 1`] = `
[
  {
    "errorCount": 0,
    "filePath": "<fixture>/src/dir/eslint.config.js",
    "messages": [],
    "warningCount": 0,
  },
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/dir/test.js",
    "messages": [
      {
        "ruleId": "no-console",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/test.js",
    "messages": [
      {
        "ruleId": "prefer-const",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
]
`;
